--- a/template.env
+++ b/template.env
@@ -1,5 +1,7 @@
 # Global Settings
-VERBOSITY=3
+VERBOSITY=4 # 0: Error, 1: Warning, 2: Info, 3: Debug, 4: Trace
+write_to_file=True # Write logs to file
+clear_logs_on_start=True # Clear logs on startup
 # API's
     # igdb (Twitch)
         # https://dev.twitch.tv/console/apps/create
