Update requirements.txt to remove un-needed packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
-certifi==2025.7.9
-charset-normalizer==3.4.2
-idna==3.10
-requests==2.32.4
-urllib3==2.5.0
-python-dotenv
-pytest==8.4.1
+python-dotenv==1.1.1
+Requests==2.32.4
