--- a/.github/workflows/pipreqs.yml
+++ b/.github/workflows/pipreqs.yml
@@ -44,9 +44,13 @@ jobs:
         run: |
           git add requirements.txt
           if git diff --cached --quiet; then
-            echo "changed=false" >> $GITHUB_OUTPUT
+            echo "changed=false" >> "$GITHUB_OUTPUT"
           else
-            echo "changed=true" >> $GITHUB_OUTPUT
+            echo "changed=true" >> "$GITHUB_OUTPUT"
+            echo "::group::requirements.txt diff"
+            git diff --cached requirements.txt
+            echo "::endgroup::"
+          fi
         shell: bash
 
       - name: Create PR if requirements.txt changed
