Implement `skip_invalid_row`

--- a/template.env
+++ b/template.env
@@ -2,7 +2,8 @@
 verbosity=4 # 0: Error, 1: Warning, 2: Info, 3: Debug, 4: Trace
 write_to_file=True # Write logs to file
 clear_logs_on_start=True # Clear logs on startup
-#traceback_exit=False # Exits the script immediately on ERROR level verbosity messages
+traceback_exit=False # Exits the script immediately on ERROR level verbosity messages
+skip_invalid_row=False # When using adapters.validate.py, if the row fails validation do not include into yamtrack export
 # API's
     # igdb (Twitch)
         # https://dev.twitch.tv/console/apps/create
