--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -32,6 +32,8 @@ version-resolver:
       - 'patch'
   default: patch
 template: |
-  ## Changes
+  # Changes
 
   $CHANGES
+
+  **Full Changelog**: https://github.com/owner/repo/compare/$PREVIOUS_TAG...$NEXT_TAG
