dont trigger on changes to actions

--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -6,6 +6,14 @@ on:
     branches:
       - main
       - master
+    paths-ignore:
+      - '.github/**'
+  workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Branch to build'
+        required: true
+        default: 'main'
 
   # pull_request event is required only for autolabeler
   pull_request:
