--- a/.github/workflows/sync-wiki.yml
+++ b/.github/workflows/sync-wiki.yml
@@ -6,6 +6,8 @@ on:
       - main
     paths:
       - 'wiki/**'
+    paths-ignore:
+      - '.github/**'
   workflow_dispatch:
     inputs:
       branch:
